# compearth

./: .travis.yml  LICENSE.txt  README.md
momenttensor/c_src/: CMT2TT.c  CMT2faultpar.c  CMT2m0.c  CMT2mw.c  CMT2omega.c  CMTdecom.c  CMTdecomIso.c  CMakeLists.txt  Doxyfile  LICENSE  Mvec2Mmat.c  README.md  README.txt  TT2CMT.c  U2pa.c  Udetcheck.c  Uorth.c  angleMT.c  auxiliaryPlane.c  beta2u.c  cart2sph.c  cmt2tt.c  compearth.F90  convertMT.c  eulerUtil_fangleSigned.c  eulerUtil_rotmat.c  eulerUtil_rotmatGen.c  fangle.c  gamma2v.c  h2theta.c  lam2lune.c  lam2nualpha.c  lam2phizeta.c  lamsort.c  lune2lam.c  lune2rect.c  m02hdur.c  m02mw.c  mw2m0.c  normMT.c  (+15 more)
momenttensor/c_src/CMakeModules/: FindCBLAS.cmake  FindCompearth.cmake.in  FindISCL.cmake  FindLAPACKE.cmake  FindMKL.cmake  FindSWIGOTHER.cmake
momenttensor/c_src/include/: CMakeLists.txt  compearth.h  compearth_constants.h  compearth_enum.h  config.h.in
momenttensor/c_src/python_ctypes/: compearth.py
momenttensor/c_src/swig/: swig-controller.i
momenttensor/c_src/unit_tests/: app2015.c  checks.c  cmopad.c  cmopad.h  decompose.c
momenttensor/matlab/: CMT2CDC.m  CMT2TT.m  CMT2TT15.m  CMT2all.m  CMT2epsilon.m  CMT2faultpar.m  CMT2faultvec.m  CMT2mw.m  CMT2omega.m  CMT2omega_xi.m  CMT2omega_xi0.m  CMT2omegadc_xi0.m  CMTconvert.m  CMTdecom.m  CMTdecom_iso.m  Minson2007_Table8.txt  Mvec2Mmat.m  README  TT152CMT.m  TT2013AppA.m  TT2015AppA.m  TT2CMT.m  Tk2lam.m  U2pa.m  U2pst.m  U2sdr.m  U2xi0.m  Udetcheck.m  Ueigvec.m  UiU.m  Uorth.m  Vomega.m  Wperp.m  beta2u.m  convert_MT.m  convert_getbasis.m  convertq.m  convertv.m  dcfaultpar2Pbox.m  dcfaultpar2Ubox.m  (+53 more)
momenttensor/matlab/Vhat/: Vgammaomega.m  Vomega_point.m  ZWgamma.m  abcgamma.m  load_Vgammaomega.m  load_omegacrit.m  run_Vhat_lib.m  run_Vhat_plot.m  shatngammaomega.m  zhatngammaomega.m  zhatpgammaomega.m
momenttensor/matlab/Vhat_orig/: STgamma.m  Vgammaomega.m  load_omegacrit.m  mugammaomega.m  omegacritmod.m  path_Vhat.m  rgammaomega.m  run_Vhat_lib.m  shatpgammaomega.m
momenttensor/plot/gmt/: .gmtdefaults4  lune.csh  lune.pl  lune_beachballs.csh  lune_beachballs.pl  lune_beachballs_min.csh  lune_gmt601.pl
momenttensor/plot/mma/: BBcodeExplanation.nb  BBs3Dand2D.nb  BBsWithOptions.nb  BrickCode.nb  FaultBlockPicture.nb  Lune.nb  LuneExtended.nb  LuneWithOptions.nb  README  common_MTfuns.nb  common_funs.nb
momenttensor/python/: README.md  README.txt
momenttensor/python/compearth/: core.py
momenttensor/python/tests/: test_convert.py
optimization/: README  plot_covsamples.m  plot_epicenters.m  plot_histo.m
surfacevel2strain/: README
surfacevel2strain/USER_INFO/: README
surfacevel2strain/USER_INFO/latex/: surfacevel2strain_manual.tex
surfacevel2strain/gmt/: foursub.pl  plot_strain.pl
surfacevel2strain/gmt/input/: Romanian_flag_smooth.cpt
surfacevel2strain/gmt/utils/: foursub.pl  mogi_dilat.pl  socal_centers.pl  socal_rot.pl  socal_vec.pl  syn_four_strain.pl
surfacevel2strain/matlab/: check_l2norm.m  euler2rotmat.m  euler_rot_tec.m  fault_2D.m  get_gps_dataset.m  get_gps_dataset_carl.m  getsubset.m  japan_gps_dat.m  plot_dogsph_bw.m  poles2euler.m  polygon_centroid_3d.m  prepare_mask.m  ridge_carl.m  safdata.mat  sphereinterp.m  sphereinterp_est.m  sphereinterp_grid.m  spline_vals_mat.m  strike_slip_sphere.m  subindexing.m  surfacevel2strain.m  surfacevel2strain_evec.m  surfacevel2strain_figs.m  surfacevel2strain_write.m  triarea.m  unit.m  user_path.m  wavelet_min_scale.m  write_euler_vector_psxy.m
surfacevel2strain/matlab/func/: dogsph_vals_mat.m  euler2gps.m  euler_mapping.m  get_1D_dataset_carl.m  get_plate_model.m  getspheregrid.m  ocv_carl.m  platemodel2gps.m  prepare_mask.m  ridge_carl.m  socal_gps_figs.m  socal_gps_split.m  spline_thresh_3.m  spline_vals.m  strike_slip_sphere.m
surfacevel2strain/matlab/misc/: dest2split.m  plot_dogsph.m  plot_okada_fields.m  run_platemodel2gps.m  run_spline_vals.m  slip_constant.txt  sphereinterp_carl.m  test_euler_rot_tec.m  test_getspheregrid.m  test_gps2euler.m  test_platemodel2gps.m  test_spline_vals.m
surfacevel2strain/matlab/okada/: dc3dg.mexglx  okadanevG.asv  parchesH.m  sar.m
surfacevel2strain/matlab/old/: prepare_mask_old.m  ridge_carl_pm.m
surfacevel2strain/matlab/util/: arcdist.m  arctan.m  gridvec.m  randomvec.m  read_gps_3D.m  utm2ll_man.m  write_xy_points.m
surfacevel2strain/matlab/util_basic/: arcdist.m  axes_expand.m  counter2.m  cpt2cmap.m  fangle.m  flength.m  getsubset.m  gridvec.m  latlon2xyz.m  latlon_area.m  numvec2cell.m  plot_cumsum.m  plot_histo.m  polygon_centroid_3d.m  randomint.m  randomvec.m  read_gps_3D.m  unit.m  utm2ll.m  utm2ll_all_ellipsoids.m  write_gps_3D.m  write_gps_psvelo.m  write_gps_psxy_vert.m  write_xy_points.m  write_xyz.m  xyz2tp.m
surfacevel2strain/matlab/util_est/: dogsph_pm.m  dogsph_vals_mat.m  forward_mogi.m  get_1D_dataset_carl.m  get_gps_dataset_carl.m  getspheregrid.m  socal_gps_split.m  spline_vals_mat.m
surfacevel2strain/matlab/util_euler/: euler2gps.m  euler_convert.m  get_plate_model.m  global2local.m  global2local_mat.m  global2local_rotmat.m  gps2euler.m  platemodel2conv_vel.m  platemodel2gps.m  poles2euler.m  rotate_points.m  rotate_points_MT.m  rotmat.m  rotmat2euler.m  rotmat_gen.m  wrap360.m
trunk/momenttensor/matlab/: CMT2TT.m  CMT2dcfaultpar.m  CMT2dcfaultvec.m  CMT2epsilon.m  CMT2faultvec.m  CMT2m0.m  CMT2omega.m  CMT2omega_xi.m  CMT2omega_xi0.m  CMT2omegadc_xi0.m  CMTdecom.m  CMTrecom.m  Kphi.m  README  TT2012kaganAppE.m  TT2013AppA.m  TT2CMT.m  U2pa.m  U2q.m  U2xi.m  U2xi0.m  Udetcheck.m  Ufour.m  UiU.m  Uorth.m  convert_MT.m  convertq.m  convertv.m  dcfaultpar2CMT.m  dcfaultvec2faultpar.m  detU.m  faultpar2CMT.m  lam2lune.m  lam2nualpha.m  load_mt.m  lune2lam.m  m02hdur.m  (+14 more)
trunk/optimization/: forward_epicenter_crescent.m  optimization.m
trunk/surfacevel2strain/: README  data
tutorials/optimization/: README  forward_epicenter.m  forward_epicenter_crescent.m  genlsq.m  optimization.m  optimization_method.m  plot_histo.m  run_genlsq.m  srvm_Fhat.m  srvm_Shat_chi.m  srvm_nu.m  vm_F.m  vm_F_chi.m  wysiwyg.m
(+222 files in other folders)
